--- a/app/views/article.html
+++ b/app/views/article.html
@@ -11,7 +11,7 @@
         <action-bar></action-bar>
       </div>
       <hr />
-      <div ng-bind-html="article.html"></div>
+      <div ng-bind-html="article.html" class='article-content' handle-highlights article="article"></div>
       <hr />
       <div class='action-bar-container'>
         <action-bar></action-bar>
