--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,17 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
+
+$font-size-base:          14px;
+$font-size-h1:            floor(($font-size-base * 2.3)); // ~36px
+$font-size-h2:            floor(($font-size-base * 2)); // ~30px
+$font-size-h3:            ceil(($font-size-base * 1.5)); // ~24px
+$font-size-h4:            ceil(($font-size-base * 1.1)); // ~18px
+$font-size-h5:            $font-size-base;
+$font-size-h6:            ceil(($font-size-base * 0.85)); // ~12px
+
+$line-height-base:        1.3; // 20/14
+$line-height-computed:    floor(($font-size-base * $line-height-base)); // ~20px
+
+$headings-line-height:    1;
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
@@ -33,11 +46,11 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 body {
   font-family: 'Source Serif Pro', Georgia;
   font-weight: 400;
-  background-color: #f8f8f8;
+  background-color: #FFF;
 }
 
 a {
-  color: #0074bf;
+  color: #000;
 }
 
 h1, h2, h3, h4 {
@@ -45,14 +58,19 @@ h1, h2, h3, h4 {
 }
 
 .article {
-  color: #111;
+  color: #FFF;
 }
 
-.article:hover, .list-view-item a:hover{
+.article:hover, .list-view-item a:hover {
   text-decoration: none;
 }
 
-.detailView p {
+.detailView {
+  max-width: 660px;
+  margin: 0 auto;
+}
+
+.detailView .article-content p {
   margin: 1.5em 0;
   font-size: 18px;
   line-height: 1.7em;
@@ -63,7 +81,7 @@ h1, h2, h3, h4 {
 }
 
 .list-inline a.fa {
-  color: #111;
+  color: #000;
   font-size: 18px;
   opacity: .7;
   cursor: pointer;
@@ -85,3 +103,91 @@ h1, h2, h3, h4 {
   max-width: 80%;
   @include text-overflow();
 }
+
+.load-more {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.index {
+  .action-bar {
+    opacity: 0;
+  }
+
+  .showActionBar {
+    .action-bar {
+      opacity: 1;
+    }
+  }
+}
+
+.navbar {
+  margin-bottom: 0;
+}
+
+.navbar-default {
+  background-color: #FFF;
+  border-color: #e7e7e7;
+}
+
+.navbar .navbar-form {
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-right: 0;
+    margin-left: 0;
+    border: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+
+.animate-enter,
+.animate-leave
+{
+    -webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    position: relative;
+    display: block;
+}
+
+.animate-enter.animate-enter-active,
+.animate-leave {
+    opacity: 1;
+    right: 0;
+    height: 30px;
+}
+
+.animate-leave.animate-leave-active,
+.animate-enter {
+    opacity: 0;
+    right: -50px;
+    height: 0px;
+}
+
+@media (max-width: $screen-md-min) {
+  .navbar-form.navbar-left {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .index {
+    .action-bar {
+      opacity: 1;
+    }
+
+    .showActionBar {
+      .action-bar {
+        opacity: 1;
+      }
+    }
+  }
+
+}
+
+.annotator-hl {
+  background-color: yellow;
+}
+
